--- a/ImageGallery index.html
+++ b/ImageGallery index.html
@@ -26,20 +26,23 @@
     <!-- Gallery Thumbnails -->
     <div class="img-gallery" id="imgGallery">
         <img src="images/im1.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 1">
-        <img src="images/images2.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 2">
-        <img src="images/images3.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 3">
+        <img src="images/im19.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 6">
+        <img src="images/im20.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 7">
         <img src="images/images4.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 4">
         <img src="images/images5.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 5">
-        <img src="images/images6.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 1">
-        <img src="images/images7.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 2">
-        <img src="images/images8.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 3">
-        <img src="images/im9.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 4">
-        <img src="images/im10.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 5">
-        <img src="images/im11.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 1">
+        <img src="images/im21.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 1">
+        <img src="images/images7.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 8">
+        <img src="images/images8.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 1">
+        <img src="images/im9.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 2">
+        <img src="images/im10.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 3">
+        <img src="images/im11.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="city 2">
         <img src="images/im12.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 2">
-        <img src="images/im13.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 3">
+        <img src="images/im13.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 2">
         <img src="images/im14.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 4">
-        <img src="images/im15.jpg" data-category="abstract" onclick="openfullImg(this.src, this.dataset.index)" alt="Abstract 5">
+        <img src="images/im15.jpg" data-category="nature" onclick="openfullImg(this.src, this.dataset.index)" alt="Nature 6">
+        <img src="images/im16.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 3">
+        <img src="images/im17.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 4">
+        <img src="images/im18.jpg" data-category="city" onclick="openfullImg(this.src, this.dataset.index)" alt="City 5">
     </div>
 
     <script>
